@@ -5,6 +5,7 @@ CCMenu Release Notes
 * When not displaying black and white icons, the use of symbols for states in
   which the server is idle is now optional. This makes it possible to
   revert to the display style used before the introduction of the new icons.
+* When sorting projects alphabetically case is now ignored.
 * The authentication code can now work with Cloudbees servers.
 * Failed build count is shown with the correct font for the menu bar.
 
